# api-scan

./: .docker-build.sh  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.dev  FunctionInfoASTConsumer.cpp  FunctionInfoASTConsumer.h  FunctionScanner.cpp  FunctionScanner.h  Main.cpp  README.md  Translator.cpp  Translator.h  Util.h  XmlFormatter.h  build.sh  main.cpp
cmake/: ClangLibs.cmake  LLVMEnvironment.cmake  LLVMToolchain.cmake  Utils.cmake  clang.cmake
example-dicts/: param-dict.txt  type-dict.txt
include/: Formatter.hpp  InfoTypes.hpp  JsonFormatter.hpp  SourceScanner.hpp  Translator.hpp  Util.hpp  XmlFormatter.hpp
src/: DeclarationVisitor.cpp  DeclarationVisitor.h  Formatter.h  FunctionInfoASTConsumer.cpp  FunctionInfoASTConsumer.h  FunctionScanner.h  InfoTypes.h  JsonFormatter.cpp  JsonFormatter.h  Main.cpp  Main.h  PrintPreprocessedOutput.cpp  Program.cpp  SourceInfoASTConsumer.cpp  SourceInfoASTConsumer.h  SourceScanner.cpp  SourceScanner.h  Translator.cpp  Translator.h  Util.cpp  Util.h  XmlFormatter.cpp  XmlFormatter.h
